<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/txtTitulo"
        android:textAlignment="center"
        android:textColor="@color/txtEncuesta"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/editNombrePersona"
        android:inputType="text"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtGenero" />

    <RadioGroup
        android:id="@+id/rdgGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdHombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdHombre" />

        <RadioButton
            android:id="@+id/rdMujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdMujer" />

        <RadioButton
            android:id="@+id/rdOtro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdOtro" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swMayor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:text="@string/swMayor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtPregunta" />

        <Spinner
            android:id="@+id/spPregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/straPreguntas2"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtRespuesta" />

        <RadioGroup
            android:id="@+id/rdgRespuesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rdRespuesta1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <RadioButton
                android:id="@+id/rdRespuesta2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <RadioButton
                android:id="@+id/rdRespuesta3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/btnEnviar"
        android:text="@string/btnEnviarRespuesta"
        app:cornerRadius="0dp" />

    <CheckBox
        android:id="@+id/chLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/chLog" />

</LinearLayout>